pkg/lang/testdata/ub/comprehensions/invalid/constraint-rebind.ub
constraints: [
  {
    when:    @core.length([ for x in [1] : [ for x in [2] : x ] ]) > 0
    require: true
  }
]
